--- a/app/views/product_ads/new.html.erb
+++ b/app/views/product_ads/new.html.erb
@@ -7,7 +7,7 @@
   <%= f.input :price, as: :decimal %>
   <%= f.input :usage_time, collection: 0..60 %>
   <%= f.input :warranty %>
-  <%= f.input :expiration_time, as: :integer %>
+  <%= f.input :expiration_time, collection: [[15, '15 Dias'], [30, '30 Dias'], [60, '60 Dias'], [90, '90 Dias']], label_method: :second, value_method: :first %>
   <%= f.input :accepted_rule %>
   <%= f.submit 'Criar Anúncio' %>
 <% end %>
