--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,6 +10,10 @@
   </head>
 
   <body>
+    <% if user_signed_in? %>
+      <%= link_to 'Sair', destroy_user_session_path, method: :delete %>
+      <%= link_to 'Inserir Anúncio', new_product_ad_path %>
+    <% end %>
     <% if notice %>
       <div class="alert alert-success" role="alert">
         <%= notice %>
