--- a/app/views/sales_ads/show.html.erb
+++ b/app/views/sales_ads/show.html.erb
@@ -5,3 +5,5 @@
 <p>Garantia: <%= @product_ad.warranty? ? 'Sim': 'Não' %></p>
 <p>Expiração do anúncio: <%=@product_ad.expiration_time%> dias</p>
 <p><%=@product_ad.description%></p>
+
+<p><%= link_to 'Tenho interesse', nil %></p>
