--- a/app/views/sales_ads/show.html.erb
+++ b/app/views/sales_ads/show.html.erb
@@ -10,6 +10,10 @@
   <p><%= link_to 'Tenho interesse', conversation_sales_ad_path(@sales_ad), method: :post %></p>
 <% else %>
   <h2><%= "Conversa com #{@sales_ad.user.name}" %></h2>
+  <% @conversation.sent_messages.each do |m| %>
+    <p><%= m.body %></p>
+    <p><%= "Conversa enviada por: #{m.user.name}" %></p>
+  <% end %>%>
   <%= form_for [@conversation, @message] do |f| %>
     <%= f.label :body, 'Mensagem' %>
     <%= f.text_area :body, size: "60x12" %>
