Add test message nil
Co-authored-by: Kadu <webmaster.kdu@gmail.com>

--- a/app/views/sales_ads/show.html.erb
+++ b/app/views/sales_ads/show.html.erb
@@ -11,8 +11,10 @@
 <% else %>
   <h2><%= "Conversa com #{@sales_ad.user.name}" %></h2>
   <% @conversation.sent_messages.each do |m| %>
-    <p><%= m.body %></p>
-    <p><%= "Conversa enviada por: #{m.user.name}" %></p>
+    <div class="message">
+      <p><%= m.body %></p>
+      <p><%= "Conversa enviada por: #{m.user.name}" %></p>
+    </div>
   <% end %>%>
   <%= form_for [@conversation, @message] do |f| %>
     <%= f.label :body, 'Mensagem' %>
