--- a/app/views/users/registrations/new.html.erb
+++ b/app/views/users/registrations/new.html.erb
@@ -1,29 +1,37 @@
-<h2>Sign up</h2>
-
-<%= simple_form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
-  <%= f.error_notification %>
-
-  <div class="form-inputs">
-    <%= f.input :name,
+<div class="login-form">
+  <%= simple_form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
+    <%= f.error_notification %>  
+    <h2 class="text-center">Cadastrar</h2>
+    <div class="form-group">
+      <%= f.input :name,
                 required: true,
                 autofocus: true,
-                input_html: { autocomplete: "Nome" }%>
-    <%= f.input :email,
+                input_html: { autocomplete: "Nome" }, placeholder: 'nome', label: false %>
+    </div>
+    <div class="form-group">
+      <%= f.input :email,
                 required: true,
                 autofocus: true,
-                input_html: { autocomplete: "email" }%>
-    <%= f.input :password,
+                input_html: { autocomplete: "email" }, placeholder: 'email', label: false %>
+    </div>
+    <div class="form-group">
+      <%= f.input :password,
                 required: true,
-                hint: ("#{@minimum_password_length} characters minimum" if @minimum_password_length),
-                input_html: { autocomplete: "new-password" } %>
-    <%= f.input :password_confirmation,
+                input_html: { autocomplete: "new-password" }, placeholder: 'Senha', label: false %>
+      <em class="text-muted small"><%= "#{@minimum_password_length} caracteres no minimo" if @minimum_password_length %></em>
+    </div>
+    <div class="form-group">
+      <%= f.input :password_confirmation,
                 required: true,
-                input_html: { autocomplete: "new-password" } %>
-  </div>
+                input_html: { autocomplete: "new-password" }, placeholder: 'Confirme sua senha', label: false %>
+    </div>
 
-  <div class="form-actions">
-    <%= f.button :submit, t('.sign_up') %>
-  </div>
-<% end %>
+    <div class="form-group">
+      <%= f.button :submit, t('.sign_up'), class: 'btn btn-primary login-btn btn-block' %>
+    </div>
 
-<%= render "users/shared/links" %>
+    <div class="or-seperator"></div>
+    <br>
+    <p class="text-center text-muted small"><%= render "users/shared/links" %></p>
+  <% end %>
+</div>
