Fix errors layout

--- a/app/views/users/registrations/new.html.erb
+++ b/app/views/users/registrations/new.html.erb
@@ -6,24 +6,24 @@
       <%= f.input :name,
                 required: true,
                 autofocus: true,
-                input_html: { autocomplete: "Nome" }, placeholder: 'nome', label: false %>
+                input_html: { autocomplete: "Nome" }, placeholder: 'nome' %>
     </div>
     <div class="form-group">
       <%= f.input :email,
                 required: true,
                 autofocus: true,
-                input_html: { autocomplete: "email" }, placeholder: 'email', label: false %>
+                input_html: { autocomplete: "email" }, placeholder: 'email' %>
     </div>
     <div class="form-group">
       <%= f.input :password,
                 required: true,
-                input_html: { autocomplete: "new-password" }, placeholder: 'Senha', label: false %>
+                input_html: { autocomplete: "new-password" }, placeholder: 'Senha' %>
       <em class="text-muted small"><%= "#{@minimum_password_length} caracteres no minimo" if @minimum_password_length %></em>
     </div>
     <div class="form-group">
       <%= f.input :password_confirmation,
                 required: true,
-                input_html: { autocomplete: "new-password" }, placeholder: 'Confirme sua senha', label: false %>
+                input_html: { autocomplete: "new-password" }, placeholder: 'Confirme sua senha' %>
     </div>
 
     <div class="form-group">
