--- a/app/assets/stylesheets/main.scss
+++ b/app/assets/stylesheets/main.scss
@@ -4,4 +4,5 @@
 .input-group-addon .fa { font-size: 18px; }
 .login-btn { font-size: 15px; font-weight: bold; }
 .or-seperator { margin-top: 20px; text-align: center; border-top: 1px solid #ccc; }
-.or-seperator i { padding: 0 10px; background: #f7f7f7; position: relative; top: -11px; z-index: 1;} 
+.or-seperator i { padding: 0 10px; background: #f7f7f7; position: relative; top: -11px; z-index: 1;}
+label.form-control-label{display: none;}
