--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,21 +10,49 @@
   </head>
 
   <body>
-    <% if user_signed_in? %>
-      <%= link_to 'Sair', destroy_user_session_path, method: :delete %>
-      <%= link_to 'Inserir Anúncio', new_sales_ad_path %>
-    <% end %>
-    <% if notice %>
-      <div class="alert alert-success" role="alert">
-        <%= notice %>
+    <header>
+      <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+        <div class="container" wfd-id="32">
+          <a class="navbar-brand" href="/">FirmaShop</a>
+          <button class="navbar-toggler collapsed" type="button" data-toggle="collapse" data-target="#navbarsExample07" aria-controls="navbarsExample07" aria-expanded="false" aria-label="Toggle navigation" wfd-id="103">
+            <span class="navbar-toggler-icon" wfd-id="42"></span>
+          </button>
+
+          <div class="navbar-collapse collapse" id="navbarsExample07" style="" wfd-id="33">
+            <ul class="navbar-nav ml-auto" wfd-id="35">
+              <% if user_signed_in? %>
+                <li class="nav-item active" wfd-id="40">
+                  <%= link_to 'Inserir Anúncio', new_sales_ad_path, class: 'nav-link btn btn-info', role: 'button' %>
+                </li>
+                <li class="nav-item" wfd-id="39">
+                  <%= link_to 'Sair', destroy_user_session_path, method: :delete, class: 'nav-link' %>
+                </li>
+              <% end %>
+            </ul>
+            <!--<form class="form-inline my-2 my-md-0" wfd-id="34">
+              <input class="form-control" type="text" placeholder="Search" aria-label="Search" kl_vkbd_parsed="true" wfd-id="93">
+            </form>-->
+          </div>
+        </div>
+      </nav>
+    </header>
+
+    <main role='main'>
+      <div class='container'>
+        <br>
+        <% if notice %>
+          <div class="alert alert-success" role="alert">
+            <%= notice %>
+          </div>
+        <% end %>
+        <% if alert %>
+          <div class="alert alert-danger" role="alert">
+            <%= alert %>
+          </div>
+          <p class="notice"><%= notice %></p>
+        <% end %>
+        <%= yield %>
       </div>
-    <% end %>
-    <% if alert %>
-      <div class="alert alert-danger" role="alert">
-        <%= alert %>
-      </div>
-      <p class="notice"><%= notice %></p>
-    <% end %>
-    <%= yield %>
+    </main>
   </body>
 </html>
