Insere resposta de conversa pelo vendedor

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -24,6 +24,9 @@
                 <li class="nav-item active" wfd-id="40">
                   <%= link_to 'Inserir Anúncio', new_sales_ad_path, class: 'nav-link btn btn-info', role: 'button' %>
                 </li>
+                <li class="nav-item active" wfd-id="41">
+                  <%= link_to 'Minhas Mensagens', conversations_path, class: 'nav-link btn btn-info', role: 'button' %>
+                </li>
                 <li class="nav-item" wfd-id="39">
                   <%= link_to 'Sair', destroy_user_session_path, method: :delete, class: 'nav-link' %>
                 </li>
