--- a/app/views/sales_ads/show.html.erb
+++ b/app/views/sales_ads/show.html.erb
@@ -9,14 +9,17 @@
   <%= image_tag photo %>
 <% end %>
 
-<% if @conversation.nil? %>
-  <p><%= link_to 'Tenho interesse', conversation_sales_ad_path(@sales_ad), method: :post %></p>
-<% else %>
-  <ul class="list-group">
-    <li class="list-group-item active">
-      <%= "Conversa com #{@sales_ad.user.name}" %>
-    </li>
+<% if @sales_ad.user != current_user %>
+  <% if @conversation.nil?%>
+    <p><%= link_to 'Tenho interesse', conversation_sales_ad_path(@sales_ad),
+                                      method: :post %></p>
+  <% else %>
+    <ul class="list-group">
+      <li class="list-group-item active">
+        <%= "Conversa com #{@sales_ad.user.name}" %>
+      </li>
 
-    <%= render partial: 'conversations/conversation' %>
-  </ul>
+      <%= render partial: 'conversations/conversation' %>
+    </ul>
+  <% end %>
 <% end %>
