--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,6 +1,6 @@
 <h1> <%= current_user.company.name %> </h1>
 
-<% current_user.company.sales_ads.each do |ad| %>
+<% current_user.company.sales_ads.active.each do |ad| %>
   <div>
     <% if ad.photos.attached? %>
       <%= image_tag ad.photos.first %>
