--- a/app/views/sales_ads/show.html.erb
+++ b/app/views/sales_ads/show.html.erb
@@ -1,30 +1,29 @@
-<h1><%=@sales_ad.title%></h1>
+<h1><%= @sales_ad.title%></h1>
 <span><%= t(@sales_ad.ad_state) %></span>
+<p><%= @sales_ad.description %></p>
+<%= render @sales_ad %>
 
-<p><%=@sales_ad.description%></p>
-<p><%=number_to_currency(@sales_ad.price)%></p>
-<p><%=@sales_ad.usage_time%> meses</p>
-<p>Garantia: <%= @sales_ad.warranty? ? 'Sim': 'Não' %></p>
-<p>Expiração do anúncio: <%=@sales_ad.expiration_time%> dias</p>
 <p><%=@sales_ad.description%></p>
 <% @sales_ad.photos.each do |photo| %>
   <%= image_tag photo %>
 <% end %>
 
 <% if @sales_ad.active? %>
-  <% if @sales_ad.user == current_user %>
-    <%= link_to 'Inativar este anuncio', inactive_sales_ad_path(@sales_ad), method: :put %>
-  <% end %>
-  <% if @conversation.nil?%>
-    <p><%= link_to 'Tenho interesse', conversation_sales_ad_path(@sales_ad),
-                                      method: :post %></p>
-  <% else %>
-    <ul class="list-group">
-      <li class="list-group-item active">
-        <%= "Conversa com #{@sales_ad.user.name}" %>
-      </li>
+  <% unless @sales_ad.user == current_user %>
+    <% if @conversation.nil?%>
+      <p><%= link_to 'Tenho interesse', conversation_sales_ad_path(@sales_ad),
+                                        method: :post %></p>
+    <% else %>
+      <ul class="list-group">
+        <li class="list-group-item active">
+          <%= "Conversa com #{@sales_ad.user.name}" %>
+        </li>
 
-      <%= render partial: 'conversations/conversation' %>
-    </ul>
+        <%= render partial: 'conversations/conversation' %>
+      </ul>
+    <% end %>
+  <% else %>
+  <%= link_to 'Inativar este anuncio', inactive_sales_ad_path(@sales_ad),
+      method: :put %>
   <% end %>
 <% end %>
