--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,20 +13,26 @@
     <header>
       <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
         <div class="container">
-          <a class="navbar-brand" href="/">FirmaShop</a>
-          <button class="navbar-toggler collapsed" type="button" data-toggle="collapse" data-target="#navbarsExample07" aria-controls="navbarsExample07" aria-expanded="false" aria-label="Toggle navigation">
+          <% unless current_user&.company&.name %>
+            <a class="navbar-brand" href="/">FirmaShop</a>
+          <% else %>
+            <a class="navbar-brand" href="/"><%= current_user.company.name %></a>
+          <% end %>
+          <button class="navbar-toggler collapsed" type="button" data-toggle="collapse" data-target="#navbarTop" aria-controls="navbarTop" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
           </button>
 
-          <div class="navbar-collapse collapse" id="navbarsExample07">
+          <div class="navbar-collapse collapse" id="navbarTop">
             <% if user_signed_in? %>
-              <div class="form-inline mr-auto">
-                <%= form_tag(search_sales_ads_path, method: "get") do %>
-                  <%= label_tag(:q, "Buscar") %>
-                  <%= text_field_tag(:q) %>
-                  <%= submit_tag("Buscar") %>
-                <% end %>  
-              </div>
+              <%= simple_form_for :search,  url: search_sales_ads_path , method: :get, html: {class: 'form-inline ml-auto'} do |f| %>
+                <div class="input-group">
+                  <%= f.input :q, autofocus: true, label: 'Buscar', class: 'form-control', placeholder: 'digite o que deseja encontrar',
+                              aria: {label: "digite o que deseja encontrar", describedby: "button-search"} %>
+                  <div class="input-group-append">
+                    <%= f.submit 'Buscar', class: 'btn btn-info', id: 'button-search' %>
+                  </div>
+                </div>
+              <% end %>
               <ul class="navbar-nav ml-auto">
                 <li class="nav-item active">
                   <%= link_to 'Inserir Anúncio', new_sales_ad_path, class: 'nav-link btn btn-info', role: 'button' %>
