--- a/app/views/sales_ads/show.html.erb
+++ b/app/views/sales_ads/show.html.erb
@@ -1,31 +1,43 @@
+<% if @sales_ad.photos.attached? %>
+  <div class="row">
+    <% @sales_ad.photos.each do |photo| %>
+      <div class="card mb-3 ml-3" style="width: 18rem;">
+        <%= image_tag photo.variant(resize: '300x'), class: 'img-fluid' %>
+      </div>
+    <% end %>
+  </div>
+<% else %>
+  <%= image_tag 'default_ad.png' %>
+<% end %>
+
 <h1><%=@sales_ad.title%></h1>
-<span><%= t(@sales_ad.ad_state) %></span>
+<span class="badge badge-primary"><%= t(@sales_ad.ad_state) %></span>
 
 <p><%=@sales_ad.description%></p>
 <p><%=number_to_currency(@sales_ad.price)%></p>
 <p><%=@sales_ad.usage_time%> meses</p>
 <p>Garantia: <%= @sales_ad.warranty? ? 'Sim': 'Não' %></p>
 <p>Expiração do anúncio: <%=@sales_ad.expiration_time%> dias</p>
-<p><%=@sales_ad.description%></p>
 
 <% if @sales_ad.active? %>
-  <% if @sales_ad.user == current_user %>
+  <% if @sales_ad.owner? current_user %>
     <%= link_to 'Inativar este anuncio', inactive_sales_ad_path(@sales_ad), method: :put %>
-  <% end %>
-  <% if @conversation.nil? %>
-    <p><%= link_to 'Tenho interesse', conversation_sales_ad_path(@sales_ad), method: :post %></p>
   <% else %>
-    <h2><%= "Conversa com #{@sales_ad.user.name}" %></h2>
-    <% @conversation.sent_messages.each do |m| %>
-      <div class="message">
-        <p><%= m.body %></p>
-        <p><%= "Conversa enviada por: #{m.user.name}" %></p>
-      </div>
-    <% end %>%>
-    <%= form_for [@conversation, @message] do |f| %>
-      <%= f.label :body, 'Mensagem' %>
-      <%= f.text_area :body, size: "60x12" %>
-      <%= f.submit "Enviar" %>
+    <% if @conversation.nil? %>
+      <p><%= link_to 'Tenho interesse', conversation_sales_ad_path(@sales_ad), method: :post %></p>
+    <% else %>
+      <h2><%= "Conversa com #{@sales_ad.user.name}" %></h2>
+      <% @conversation.sent_messages.each do |m| %>
+        <div class="message">
+          <p><%= m.body %></p>
+          <p><%= "Conversa enviada por: #{m.user.name}" %></p>
+        </div>
+      <% end %>
+      <%= form_for [@conversation, @message] do |f| %>
+        <%= f.label :body, 'Mensagem' %>
+        <%= f.text_area :body, size: "60x12" %>
+        <%= f.submit "Enviar" %>
+      <% end %>
     <% end %>
   <% end %>
 <% end %>
