Changes to name

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -14,24 +14,26 @@
       <header>
         <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
           <div class="container">
-            <% unless current_user&.company&.name %>
-              <a class="navbar-brand" href="/">Firma-Shop</a>
-            <% else %>
+            <% if current_user&.company&.name %>
               <a class="navbar-brand" href="/"><%= current_user.company.name %></a>
+            <% else %>
+              <a class="navbar-brand" href="/">Firma-Shop</a>
             <% end %>
             <button class="navbar-toggler collapsed" type="button" data-toggle="collapse" data-target="#navbartop" aria-controls="navbartop" aria-expanded="false" aria-label="toggle navigation">
               <span class="navbar-toggler-icon"></span>
             </button>
 
             <div class="navbar-collapse collapse" id="navbarsExample07" style="" wfd-id="33">
-              <%= simple_form_for :search,  url: search_sales_ads_path , method: :get, html: {class: 'form-inline ml-auto'} do |f| %>
-                <div class="input-group">
-                  <%= f.input :q, autofocus: true, label: 'Buscar', class: 'form-control', placeholder: 'digite o que deseja encontrar',
-                    aria: {label: "digite o que deseja encontrar", describedby: "button-search"} %>
-                  <div class="input-group-append">
-                    <%= f.submit 'Buscar', class: 'btn btn-info', id: 'button-search' %>
+              <% if user_signed_in? %>
+                <%= simple_form_for :search,  url: search_sales_ads_path , method: :get, html: {class: 'form-inline ml-auto'} do |f| %>
+                  <div class="input-group">
+                    <%= f.input :q, autofocus: true, label: 'Buscar', class: 'form-control', placeholder: 'digite o que deseja encontrar',
+                      aria: {label: "digite o que deseja encontrar", describedby: "button-search"} %>
+                    <div class="input-group-append">
+                      <%= f.submit 'Buscar', class: 'btn btn-info', id: 'button-search' %>
+                    </div>
                   </div>
-                </div>
+                <% end %>
               <% end %>
               <ul class="navbar-nav ml-auto" wfd-id="35">
                 <% if user_signed_in? %>
