--- a/app/views/sales_ads/show.html.erb
+++ b/app/views/sales_ads/show.html.erb
@@ -6,7 +6,7 @@
       <p><%= link_to 'Tenho interesse', conversation_sales_ad_path(@sales_ad),
                                         method: :post %></p>
     <% else %>
-      <ul class="list-group">
+      <ul class="list-group mb-5">
         <li class="list-group-item active">
           <%= "Conversa com #{@sales_ad.user.name}" %>
         </li>
