--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -14,7 +14,10 @@
       <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
         <div class="container">
           <% unless current_user&.company&.name %>
-            <a class="navbar-brand" href="/">FirmaShop</a>
+            
+            <a class="navbar-brand" href="">
+              <%= image_tag 'logo-firma-shop.svg', height: '40' %>
+            </a>
           <% else %>
             <a class="navbar-brand" href="/"><%= current_user.company.name %></a>
           <% end %>
@@ -34,15 +37,22 @@
                 </div>
               <% end %>
               <ul class="navbar-nav ml-auto">
-                <li class="nav-item active" wfd-id="41">
-                  <%= link_to 'Minhas Mensagens', conversations_path, class: 'nav-link btn btn-info', role: 'button' %>
+                <li class="nav-item active">
+                  <span class= "nav-link"><%= "Olá #{current_user.name}" %></span>
                 </li>
-                <li class="nav-item" wfd-id="39">
+                <li class="nav-item">
                   <%= link_to 'Sair', destroy_user_session_path, method: :delete, class: 'nav-link' %>
                 </li>
-                <li class="nav-item active">
-                  <%= link_to 'Inserir Anúncio', new_sales_ad_path, class: 'nav-link btn btn-info', role: 'button' %>
-                </li>
+                <div class="row">
+                  <div class="col-sm">
+                    <li class="nav-item active">
+                      <%= link_to 'Minhas Mensagens', conversations_path, class: 'nav-link btn btn-outline-info' %>
+                    </li>
+                  </div>
+                  <li class="nav-item active">
+                    <%= link_to 'Inserir Anúncio', new_sales_ad_path, class: 'nav-link btn btn-info', role: 'button' %>
+                  </li>
+                </div>
               </ul>
             <% end %>
           </div>
