--- a/app/views/layouts/mailer.html.erb
+++ b/app/views/layouts/mailer.html.erb
@@ -2,12 +2,13 @@
 <html>
   <head>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+    <title>FirmaShop - Confirmação de Cadastro</title>
     <style>
       /* Email styles need to be inline */
     </style>
   </head>
 
-  <body>
+  <body rightmargin="0" leftmargin="0" bottommargin="0" topmargin="0">
     <%= yield %>
   </body>
 </html>
